--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <link rel="stylesheet" href="../Tic-Tac-Toe/css/style.css">
 </head>
 <body>
+    <h1>Hello</h1>
+<div id="board">
+    <div id="display">
+        <p class="board"></p>
+        <p class="board"></p>
+        <p class="board"></p>
+        <p class="board"></p>
+        <p class="board"></p>
+        <p class="board"></p>
+        <p class="board"></p>
+        <p class="board"></p>
+        <p class="board"></p>
+    </div>
+</div>
 <script src="./java/java.js" defer></script>
 </body>
 </html>
