JUST PLAYIN AROUND
I Have no idea what
im doin

--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
     <link rel="stylesheet" href="../Tic-Tac-Toe/css/style.css">
 </head>
 <body>
-
+    <h1>Hello</h1>
+    <div id="gameBoard">
+        <p id="spots"></p>
+        <p id="spots"></p>
+        <p id="spots"></p>
+        <p id="spots"></p>
+        <p id="spots"></p>
+        <p id="spots"></p>
+        <p id="spots"></p>
+        <p id="spots"></p>
+        <p id="spots"></p>
+    </div>
 <script src="./java/java.js" defer></script>
 </body>
 </html>
