THis is hard dawg
just playing with some code bout to do soem reserch
and what not

--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 </head>
 <body>
     <h1>Hello</h1>
-<div id="board">
-    <div id="display">
-        <p class="board"></p>
-        <p class="board"></p>
-        <p class="board"></p>
-        <p class="board"></p>
-        <p class="board"></p>
-        <p class="board"></p>
-        <p class="board"></p>
-        <p class="board"></p>
-        <p class="board"></p>
+<div id="container">
+    <div id="display">  
+        <p class="board" id="one"></p>
+        <p class="board" id="two"></p>
+        <p class="board" id="three"></p>
+        <p class="board" id="four"></p>
+        <p class="board" id="five"></p>
+        <p class="board" id="six"></p>
+        <p class="board" id="seven"></p>
+        <p class="board" id="eight"></p>
+        <p class="board" id="nine"></p>
     </div>
 </div>
 <script src="./java/java.js" defer></script>
